2000-05-04  Jason L Tibbitts III  <tibbs@math.uh.edu>

	* lib/Bf/Parser.pm (parse): Allow lower case types because some
	sites will actually downcase them.

	* lib/Mj/Config.pm (parse_access_rules): Remove spurious debugging
	code.

	* lib/Mj/Access.pm (_d_post): Add "non-member submission" reason
	when restrict_post triggers.

	* lib/Mj/Resend.pm (post): Fix warning when no subject is present.

	* lib/Mj/List.pm (new): Don't try to create any databases if our
	directory doesn't exist.

	* lib/Mj/Config.pm (parse_restrict_post): Was completely broken.

2000-05-03  Jason L Tibbitts III  <tibbs@math.uh.edu>

	* lib/Mj/Access.pm (list_access_check): Reindent slightly.

	* lib/Mj/Config.pm (parse_access_rules): Just use the stored class
	info that parse_taboo_* create instead of parsing the variables
	ourselves.
	Extract data from global variables as well.	

2000-05-02  Jason L Tibbitts III  <tibbs@math.uh.edu>

	* lib/Mj/Config.pm (parse_taboo_body): Store all of the classes
	defined by any of the rules.
	(parse_taboo_headers): Ditto.

	* lib/Majordomo.pm (_make_list): Add a callback for
	_global_config_get, so global variables can be extracted internal
	to the list configuration.

	* lib/Mj/Config.pm (parse_access_rules): Extract the classes
        defined in taboo and admin rules and pass them into _compile_rule
        so they can be listed as legal variables.
	(_compile_rule): Don't blindly match against (admin|taboo)_ for
	legal variables; use the hash of variables passed in to us
	instead.

2000-04-21  Jason Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Mj/MailOut.pm (owner_done): Handle new return from
	Bf::parse.  Build an intelligible message from all of the data we
	have available.

	* lib/Bf/Parser.pm (parse): Redo data passing.  Return information
	gleaned from envelope as well as hashref to data pulled from
	parsed bounces.
	(parse_dsn): Clean up and return bad address instead of complete
	content of final-/original-recipient line.
